# AutoAccessIA

./: .gitignore  README.md  char_model.tflite  char_model_quant.tflite  license_plate_interpreter.py  model.ipynb  model2.ipynb  pyproject.toml  rotular_caracteres.py  segmentation.py
