[project]
name = "license-plate-segmentation"
version = "0.1.0"
description = ""
authors = [
    {name = "Lcs-ns",email = "lucas.nas314@gmail.com"}
]
readme = "README.md"
package-mode = false

requires-python = ">=3.10"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "paddlepaddle (>=3.0.0,<4.0.0) ; python_version == \"3.10\"",
    "setuptools (>=80.9.0,<81.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

